# optic

./: .gitignore  CMakeLists.txt  LICENSE  msp430fr5994.ld  refresh_buildsys.sh
aes/: CMakeLists.txt  Makefile  aesa copy.c  aesa.c  aesa.h  ic.c  ic.h  main.c
aes/reference_output/: TI_aes_128_encr_only.c  aes128  aes128.c
cmake/: app_compile_options.cmake  lib_compile_options.cmake  toolchain.cmake
debs/: CMakeLists.txt  config.h  ic.c  ic.h
dma/: CMakeLists.txt  dma.c  dma.h  main.c
lib/: CMakeLists.txt  ic.c  ic.h  ips.h  msp430fr5994.ld
lib/debs/: CMakeLists.txt  config.h  debs.c
lib/opta/: CMakeLists.txt  config.h  opta.c
lib/samoyed/: CMakeLists.txt  config.h  samoyed.c
model/: result.csv  result.txt  simple_exploration_model  simple_exploration_model.cc
opta/: CMakeLists.txt  config.h  ic.c  ic.h  ic_intcomp.c
radio/: CMakeLists.txt  config.h  hal_spi_rf.c  hal_spi_rf.h  ic.c  ic.h  main.c  msp_nrf24.c  msp_nrf24.h
refs/: aesa_example_code.c
refs/radio/: CMakeLists.txt  eusci_b_spi.h  gpio.h  main.c
results/: aes_profiling.txt  aesa_profile.txt  dma_profiling.txt  uart_profiling.txt
results/exploration/: configurations.md  data_size.md  variability.md
results/profiling/: aes_profiling.txt  aes_profilingtxt
scripts/: compe_thresholds.py  design_comparison.py  external_comp_thresholds.py  linear_regression.py  pv_curve.csv  result.txt
scripts/design_comparison/: design_comparison.py  new_result.txt
scripts/differentiate_pv_charging/: differentiate.cpp
scripts/linear_regression/: linear_regression.py  pv_curve.csv  pv_curve_23Nov_1_1.csv  pv_curve_24Nov_1_1.csv  pv_curve_new.csv  variable_data.csv
scripts/process_profiling_results/: input.txt  output.txt  process_profiling_results.py
test/: CMakeLists.txt  config.h  ic.c  ic.h  main.c  uart.c  uart.h
uart/: CMakeLists.txt  main.c
